:bug: fix missing required parameter

--- a/.github/workflows/format-pr-on-dotnet-format-command.yml
+++ b/.github/workflows/format-pr-on-dotnet-format-command.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           action: "fix"
           only-changed-files: true
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit files
         if: steps.command.outputs.command-name && steps.command.outputs.command-arguments == 'format' && steps.format.outputs.has-changes == 'true'
