--- a/.github/workflows/verify-formatting-on-pr.yml
+++ b/.github/workflows/verify-formatting-on-pr.yml
@@ -18,4 +18,4 @@ jobs:
         uses: jfversluis/dotnet-format@v1.0.9
         with:
           only-changed-files: true
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
