--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,10 +22,10 @@ jobs:
         dotnet-version: 7.0.x 
 
     - name: 📦 restore packages
-      run: dotnet restore Burser.sln
+      run: dotnet restore src/Burser.sln
       
     - name: 👷 build project
-      run: dotnet build --configuration Release --no-restore Burser.sln
+      run: dotnet build --configuration Release --no-restore src/Burser.sln
     
     - name: ✅ test project
-      run: dotnet test --no-restore --verbosity normal Burser.sln
+      run: dotnet test --no-restore --verbosity normal src/Burser.sln
