:green_heart: explicitly install maui workload

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,6 +23,9 @@ jobs:
     - name: ⚙️ restore workloads
       run: dotnet workload restore src/Burser.sln
 
+    - name: ⚒️ explicitly install maui workload
+      run: dotnet workload install maui   
+
     - name: 📦 restore packages
       run: dotnet restore src/Burser.sln
       
