--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,13 +1,14 @@
 name: Build & test 
 
 on:
-  push:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
+    inputs:
+      targtFramework:
+        description: 'Framework to build on & test for'
+        required: true
 
 jobs:
   build-and-test:
-
     name: build-and-test-${{matrix.os}}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -16,21 +17,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: 📦 setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x 
+
     - name: ⚙️ restore workloads
-      run: dotnet workload restore src/Burser.sln
+      run: dotnet workload restore src/Burser/Burser.csproj
 
     - name: ⚒️ explicitly install maui workload
       run: dotnet workload install maui   
 
     - name: 📦 restore packages
-      run: dotnet restore src/Burser.sln
+      run: dotnet restore src/Burser.sln -p:TargetFramework=${{ inputs.targetFramework }}
       
     - name: 👷 build project
-      run: dotnet build --configuration Release --no-restore src/Burser.sln
+      run: dotnet build --configuration Release --no-restore src/Burser.csproj -p:TargetFramework=${{ inputs.TargetFramework }}
     
-    - name: ✅ test project
-      run: dotnet test --no-restore --verbosity normal src/Burser.sln
+    # device unit tests shall be implemented later on
+    #- name: ✅ test project
+    #run: dotnet test --no-restore --verbosity normal src/Burser.sln
