--- a/.github/workflows/build-and-test-android.yml
+++ b/.github/workflows/build-and-test-android.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   build_and_test_android:
+    name: build-and-test-android
+    runs-on: ubuntu-latest
+
     steps:
     - uses: ./.github/workflows/build-and-test.yml
       with:
