--- a/.github/workflows/build-and-test-ios.yml
+++ b/.github/workflows/build-and-test-ios.yml
@@ -6,7 +6,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build_and_test_android:
+  build_and_test_ios:
+    name: build-and-test-ios
+    runs-on: ubuntu-latest
+
     steps:
     - uses: ./.github/workflows/build-and-test.yml
       with:
