--- a/.github/workflows/build-and-test-android.yml
+++ b/.github/workflows/build-and-test-android.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+
     - uses: ./.github/workflows/build-and-test.yml
       with:
         targetFramework: net7.0-android33.0
