:green_heart: fix missing parameter

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,6 +6,7 @@ on:
       targtFramework:
         description: 'Framework to build on & test for'
         required: true
+        type: string
 
 jobs:
   build-and-test:
